fixed QR code marquee overlap

--- a/code/www/css/style.css
+++ b/code/www/css/style.css
@@ -1094,7 +1094,7 @@ input::placeholder{
 
   .qrdiv{
     position: absolute;
-    top: 22%;  
+    top: 100px;  
     text-align: center;
     width: 100%;
     height: 70%;
